--- a/README
+++ b/README
@@ -10,14 +10,14 @@ Runtime requirements:
   libgpg-error-1.6-1
   libgpgme11-1.1.8-2
   libical0-0.44-1
-  libkdecore5-4.3.4-1
+  libkdecore5-4.3.5-1
   libopenldap2_3_0-2.3.43-1
-  libQtCore4-4.5.3-1
-  libQtDBus4-4.5.3-1
-  libQtGui4-4.5.3-1
-  libQtNetwork4-4.5.3-1
-  libQtSql4-4.5.3-1
-  libQtXml4-4.5.3-1
+  libQtCore4-4.5.3-2
+  libQtDBus4-4.5.3-2
+  libQtGui4-4.5.3-2
+  libQtNetwork4-4.5.3-2
+  libQtSql4-4.5.3-2
+  libQtXml4-4.5.3-2
   libsasl2-2.1.19-3
   libstdc++6-4.3.4-3
 
@@ -37,25 +37,28 @@ Canonical website:
   http://www.kde.org/
 
 Canonical download:
-  ftp://ftp.kde.org/pub/kde/stable/4.3.4/
+  ftp://ftp.kde.org/pub/kde/stable/4.3.5/
 
 -------------------------------------------
 
 Build instructions:
-  unpack kdepimlibs-4.3.4-X-src.tar.bz2
+  unpack kdepimlibs-4.3.5-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./kdepimlibs-4.3.4-X.cygport all
+  cygport ./kdepimlibs-4.3.5-X.cygport all
 
 This will create:
-  /usr/src/kdepimlibs-4.3.4-X-src.tar.bz2
-  /usr/src/libkpim4-devel-4.3.4-X.tar.bz2
-  /usr/src/libkpim4-4.3.4-X.tar.bz2
+  /usr/src/kdepimlibs-4.3.5-X-src.tar.bz2
+  /usr/src/libkpim4-devel-4.3.5-X.tar.bz2
+  /usr/src/libkpim4-4.3.5-X.tar.bz2
 
 -------------------------------------------
 
 Port Notes:
+
+----- version 4.3.5-1 -----
+Version bump.
 
 ----- version 4.3.4-1 -----
 Version bump for KDE 4.3.  Packages rearranged.
