--- a/README
+++ b/README
@@ -10,7 +10,7 @@ Runtime requirements:
   libgpg-error0-1.7-1
   libgpgme11-1.1.8-2
   libical0-0.44-1
-  libkdecore5-4.4.3-1
+  libkdecore5-4.4.4-1
   libopenldap2_3_0-2.3.43-1
   libphonon4-4.4.0-1
   libQtCore4-4.6.2-1
@@ -25,12 +25,12 @@ Runtime requirements:
 Build requirements:
 (besides corresponding -devel packages)
   automoc4-0.9.88-10
-  binutils-2.20.51-1
-  cmake-2.8.0-11
-  cygport-0.9.83-1
+  binutils-2.20.51-2
+  cmake-2.8.1-11
+  cygport-0.9.84-1
   gcc4-core-4.3.4-3
   gcc4-g++-4.3.4-3
-  libboost-devel-1.40.0-1
+  libboost-devel-1.43.0-1
   make-3.81-2
   pkg-config-0.23b-10
 
@@ -38,25 +38,28 @@ Canonical website:
   http://www.kde.org/
 
 Canonical download:
-  ftp://ftp.kde.org/pub/kde/stable/4.4.3/
+  ftp://ftp.kde.org/pub/kde/stable/4.4.4/
 
 -------------------------------------------
 
 Build instructions:
-  unpack kdepimlibs-4.4.3-X-src.tar.bz2
+  unpack kdepimlibs-4.4.4-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./kdepimlibs-4.4.3-X.cygport all
+  cygport ./kdepimlibs-4.4.4-X.cygport all
 
 This will create:
-  /usr/src/kdepimlibs-4.4.3-X-src.tar.bz2
-  /usr/src/libkpim4-devel-4.4.3-X.tar.bz2
-  /usr/src/libkpim4-4.4.3-X.tar.bz2
+  /usr/src/kdepimlibs-4.4.4-X-src.tar.bz2
+  /usr/src/libkpim4-devel-4.4.4-X.tar.bz2
+  /usr/src/libkpim4-4.4.4-X.tar.bz2
 
 -------------------------------------------
 
 Port Notes:
+
+----- version 4.4.4-1 -----
+Version bump.
 
 ----- version 4.4.3-1 -----
 Version bump for KDE 4.4.
